[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/UI/Buttons/Start_Button_normal.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/Buttons/Button_pressed.png" type="Texture" id=2]
[ext_resource path="res://UserInterface/UI.gd" type="Script" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 419, 193 )

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.519
margin_top = -55.092
margin_right = 127.481
margin_bottom = 58.908
focus_mode = 0
custom_styles/pressed = SubResource( 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 1 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue_Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 351.828
margin_top = -21.1509
margin_right = 599.828
margin_bottom = 92.8491
focus_mode = 0
custom_styles/pressed = SubResource( 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 1 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Assassin_select" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -649.435
margin_top = -220.555
margin_right = -401.435
margin_bottom = -106.555
focus_mode = 0
custom_styles/pressed = SubResource( 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 1 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bat_select" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 298.088
margin_top = -278.538
margin_right = 546.088
margin_bottom = -164.538
focus_mode = 0
custom_styles/pressed = SubResource( 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 1 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="Continue_Button" to="." method="_on_Continue_Button_pressed"]
[connection signal="pressed" from="Assassin_select" to="." method="_on_Assassin_select_Button_pressed"]
[connection signal="pressed" from="Bat_select" to="." method="_on_Bat_select_Button_pressed"]
